# DAIS

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci-tests.yml
bash_scripts/: generate_coverage.sh
config/: config.py
coverage/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
coverage/include/core/: base64.hpp.func-c.html  base64.hpp.func.html  base64.hpp.gcov.html  dais_agents.hpp.func-c.html  dais_agents.hpp.func.html  engine.hpp.func-c.html  engine.hpp.func.html  engine.hpp.gcov.html  file_analyzer.hpp.func-c.html  file_analyzer.hpp.func.html  file_analyzer.hpp.gcov.html  help_text.hpp.func-c.html  help_text.hpp.func.html  help_text.hpp.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  session.hpp.func-c.html  session.hpp.func.html  session.hpp.gcov.html  thread_pool.hpp.func-c.html  thread_pool.hpp.func.html  (+1 more)
coverage/src/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  main.cpp.func-c.html  main.cpp.func.html  main.cpp.gcov.html
include/core/: base64.hpp  command_handlers.hpp  config_loader.hpp  engine.hpp  file_analyzer.hpp  help_text.hpp  session.hpp  thread_pool.hpp
scripts/: generate_coverage.sh  test_local.sh
shell_scripts/: generate_coverage.sh  test_local.sh
src/: main.cpp
src/core/: command_handlers.cpp  config_loader.cpp  engine.cpp  engine_db.cpp  engine_history.cpp  engine_remote.cpp  session.cpp
src/py_scripts/: config.py  db_handler.py  tester.py
src/remote/: Dockerfile.agents  agent.cpp  build_agents.sh  generate_header.py
tests/: test_safety.cpp
tests/docker/: alpine-3.20.Dockerfile  arch.Dockerfile  debian-13.Dockerfile  docker-compose.test.yml  fedora-40.Dockerfile  ssh_test.Dockerfile  ubuntu-24.04.Dockerfile
tests/functional/: test_commands.py  test_config_loader.py  test_db_advanced.py  test_db_logic.py  test_ls_output.py
(+25 files in other folders)
